--- a/src/app/modules/home/pages/onboarding-page/onboarding-page.component.html
+++ b/src/app/modules/home/pages/onboarding-page/onboarding-page.component.html
@@ -1,4 +1,4 @@
-<body>
+<div id="page-wrap">
   <div id="content" class="grid">
     <div class="logo"></div>
     <div class="onboard">
@@ -76,4 +76,4 @@
       </div>
     </div>
   </div>
-</body>
+</div>
