--- a/src/app/modules/home/pages/wizard-page/wizard-page.component.html
+++ b/src/app/modules/home/pages/wizard-page/wizard-page.component.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="nav">
+<div id="page-wrap">
+  <div id="content" class="grid">
+    <div class="navigation">
       <img
         class="back"
         src="../../../../../assets/img/wizard-page/Goback.svg"
@@ -14,56 +8,219 @@
     </div>
     <div class="carousel-block">
       <ngb-carousel>
-        <ng-template ngbSlide class="carousel">
-          <div class="title">
-            <h2>SETTINGS</h2>
-          </div>
-          <div class="subtitle">
-            <h6>What is</h6>
-            <h1>YOUR SEX?</h1>
-          </div>
-          <div class="plates">
-            <app-custom-button inStyle="warning">
+        <ng-template ngbSlide class="slide">
+          <div class="slide-content">
+            <div class="title">
+              <h2>SETTINGS</h2>
+            </div>
+            <div class="subtitle">
+              <h6>What is</h6>
+              <h1>YOUR SEX?</h1>
+            </div>
+            <div class="plates">
               <div class="plate">
-                <p class="name">Woman</p>
-                <img src="../../../../../assets/img/wizard-page/Female.svg" />
+                <app-custom-button inStyle="warning">
+                  <div class="plate-content">
+                    <p class="name">Woman</p>
+                    <img
+                      src="../../../../../assets/img/wizard-page/Female.svg"
+                    />
+                  </div>
+                </app-custom-button>
               </div>
-            </app-custom-button>
-            <button class="plate">
-              <p class="name">Man</p>
-              <img src="../../../../../assets/img/wizard-page/Male.svg" />
-            </button>
+              <div class="plate">
+                <app-custom-button inStyle="common">
+                  <div class="plate-content">
+                    <p class="name">Man</p>
+                    <img src="../../../../../assets/img/wizard-page/Male.svg" />
+                  </div>
+                </app-custom-button>
+              </div>
+            </div>
           </div>
         </ng-template>
 
-        <ng-template ngbSlide>
-          <div class="title">
-            <h2>SETTINGS</h2>
+        <ng-template ngbSlide class="slide">
+          <div class="slide-content">
+            <div class="title">
+              <h2>SETTINGS</h2>
+            </div>
+            <div class="subtitle">
+              <h6>What is</h6>
+              <h1>YOUR AGE?</h1>
+            </div>
+            <div class="huge-input"></div>
           </div>
-          <h6>What is</h6>
-          <div class="subtitle">
-            <h1>YOUR SEX?</h1>
+        </ng-template>
+
+        <ng-template ngbSlide class="slide">
+          <div class="slide-content">
+            <div class="title">
+              <h2>SETTINGS</h2>
+            </div>
+            <div class="subtitle">
+              <h6>What is</h6>
+              <h1>YOUR HEIGHT?</h1>
+            </div>
+            <div class="plates">
+              <div class="plate">
+                <app-custom-button inStyle="warning">
+                  <div class="plate-content">
+                    <p class="name">Woman</p>
+                    <img
+                      src="../../../../../assets/img/wizard-page/Female.svg"
+                    />
+                  </div>
+                </app-custom-button>
+              </div>
+              <div class="plate">
+                <app-custom-button inStyle="common">
+                  <div class="plate-content">
+                    <p class="name">Man</p>
+                    <img src="../../../../../assets/img/wizard-page/Male.svg" />
+                  </div>
+                </app-custom-button>
+              </div>
+            </div>
           </div>
-          <tr>
-            <td>
-              <input type="checkbox" />
-            </td>
-            <td>
-              <input type="checkbox" />
-            </td>
-            <td>
-              <input type="checkbox" />
-            </td>
-          </tr>
+        </ng-template>
+
+        <ng-template ngbSlide class="slide">
+          <div class="slide-content">
+            <div class="title">
+              <h2>SETTINGS</h2>
+            </div>
+            <div class="subtitle">
+              <h6>What is</h6>
+              <h1>YOUR WEIGHT?</h1>
+            </div>
+            <div class="plates">
+              <div class="plate">
+                <app-custom-button inStyle="warning">
+                  <div class="plate-content">
+                    <p class="name">Woman</p>
+                    <img
+                      src="../../../../../assets/img/wizard-page/Female.svg"
+                    />
+                  </div>
+                </app-custom-button>
+              </div>
+              <div class="plate">
+                <app-custom-button inStyle="common">
+                  <div class="plate-content">
+                    <p class="name">Man</p>
+                    <img src="../../../../../assets/img/wizard-page/Male.svg" />
+                  </div>
+                </app-custom-button>
+              </div>
+            </div>
+          </div>
+        </ng-template>
+
+        <ng-template ngbSlide class="slide">
+          <div class="slide-content">
+            <div class="title">
+              <h2>SETTINGS</h2>
+            </div>
+            <div class="subtitle">
+              <h6>What is</h6>
+              <h1>YOUR CURRENT FITNESS LEVEL?</h1>
+            </div>
+            <div class="plates">
+              <div class="plate">
+                <app-custom-button inStyle="warning">
+                  <div class="plate-content">
+                    <p class="name">Woman</p>
+                    <img
+                      src="../../../../../assets/img/wizard-page/Female.svg"
+                    />
+                  </div>
+                </app-custom-button>
+              </div>
+              <div class="plate">
+                <app-custom-button inStyle="common">
+                  <div class="plate-content">
+                    <p class="name">Man</p>
+                    <img src="../../../../../assets/img/wizard-page/Male.svg" />
+                  </div>
+                </app-custom-button>
+              </div>
+            </div>
+          </div>
+        </ng-template>
+
+        <ng-template ngbSlide class="slide">
+          <div class="slide-content">
+            <div class="title">
+              <h2>SETTINGS</h2>
+            </div>
+            <div class="subtitle">
+              <h6>What is</h6>
+              <h1>YOUR GOAL?</h1>
+            </div>
+            <div class="plates">
+              <div class="plate">
+                <app-custom-button inStyle="warning">
+                  <div class="plate-content">
+                    <p class="name">Woman</p>
+                    <img
+                      src="../../../../../assets/img/wizard-page/Female.svg"
+                    />
+                  </div>
+                </app-custom-button>
+              </div>
+              <div class="plate">
+                <app-custom-button inStyle="common">
+                  <div class="plate-content">
+                    <p class="name">Man</p>
+                    <img src="../../../../../assets/img/wizard-page/Male.svg" />
+                  </div>
+                </app-custom-button>
+              </div>
+            </div>
+          </div>
+        </ng-template>
+
+        <ng-template ngbSlide class="slide">
+          <div class="slide-content">
+            <div class="title">
+              <h6>PLANIFICATION</h6>
+            </div>
+            <div class="subtitle">
+              <h6>How had you want to</h6>
+              <h1>TRAIN?</h1>
+            </div>
+            <div class="plates">
+              <div class="plate">
+                <app-custom-button inStyle="warning">
+                  <div class="plate-content">
+                    <p class="name">Woman</p>
+                    <img
+                      src="../../../../../assets/img/wizard-page/Female.svg"
+                    />
+                  </div>
+                </app-custom-button>
+              </div>
+              <div class="plate">
+                <app-custom-button inStyle="common">
+                  <div class="plate-content">
+                    <p class="name">Man</p>
+                    <img src="../../../../../assets/img/wizard-page/Male.svg" />
+                  </div>
+                </app-custom-button>
+              </div>
+            </div>
+          </div>
         </ng-template>
       </ngb-carousel>
-      <div class="toolbar" (click)="nextClicked()">
+      <div class="next-clickable">
         <img
           class="next-pic"
           src="../../../../../assets/img/wizard-page/nextButton.svg"
+          (click)="nextClicked()"
         />
-        <p class="next-button">NEXT</p>
+        <p class="next-button" (click)="nextClicked()">NEXT</p>
       </div>
     </div>
-  </body>
-</html>
+  </div>
+</div>
