--- a/src/app/modules/home/pages/loading-page/loading-page.component.css
+++ b/src/app/modules/home/pages/loading-page/loading-page.component.css
@@ -1,4 +1,6 @@
-body {
+#page-wrap {
+  margin: 0;
+  height: 100%;
   background-image: url("../../../../../assets/img/loading-page/BackgroundLoading.png");
   background-position: center;
   background-attachment: fixed;
@@ -22,7 +24,7 @@ body {
 
 /* tablet styles */
 @media screen and (min-width: 750px) {
-  body {
+  #page-wrap {
     font-size: 18px;
   }
 
@@ -44,7 +46,7 @@ body {
 
 /* desktop styles */
 @media screen and (min-width: 1400px) {
-  body {
+  #page-wrap {
     font-size: 20px;
   }
 
