--- a/src/app/shared/components/custom-button/custom-button.component.css
+++ b/src/app/shared/components/custom-button/custom-button.component.css
@@ -1,14 +1,14 @@
 :host {
   cursor: pointer;
 }
-
+/* 
 :host {
   width: 28.5vw;
   height: 19vw;
   border: none;
   border-radius: 0.5vw;
   background-color: white;
-}
+} */
 
 :host:hover {
   background-color: rgb(239, 252, 255);
