updated a little wizzard screen

--- a/src/app/modules/home/pages/wizard-page/wizard-page.component.html
+++ b/src/app/modules/home/pages/wizard-page/wizard-page.component.html
@@ -49,7 +49,11 @@
               <h6>What is</h6>
               <h1>YOUR AGE?</h1>
             </div>
-            <div class="huge-input"></div>
+            <form class="single-input-form">
+              <mat-form-field class="field">
+                <input type="text" matInput style="text-align: center" />
+              </mat-form-field>
+            </form>
           </div>
         </ng-template>
 
@@ -62,26 +66,11 @@
               <h6>What is</h6>
               <h1>YOUR HEIGHT?</h1>
             </div>
-            <div class="plates">
-              <div class="plate">
-                <app-custom-button inStyle="warning">
-                  <div class="plate-content">
-                    <p class="name">Woman</p>
-                    <img
-                      src="../../../../../assets/img/wizard-page/Female.svg"
-                    />
-                  </div>
-                </app-custom-button>
-              </div>
-              <div class="plate">
-                <app-custom-button inStyle="common">
-                  <div class="plate-content">
-                    <p class="name">Man</p>
-                    <img src="../../../../../assets/img/wizard-page/Male.svg" />
-                  </div>
-                </app-custom-button>
-              </div>
-            </div>
+            <form class="single-input-form">
+              <mat-form-field class="field">
+                <input type="text" matInput style="text-align: center" />
+              </mat-form-field>
+            </form>
           </div>
         </ng-template>
 
@@ -94,26 +83,11 @@
               <h6>What is</h6>
               <h1>YOUR WEIGHT?</h1>
             </div>
-            <div class="plates">
-              <div class="plate">
-                <app-custom-button inStyle="warning">
-                  <div class="plate-content">
-                    <p class="name">Woman</p>
-                    <img
-                      src="../../../../../assets/img/wizard-page/Female.svg"
-                    />
-                  </div>
-                </app-custom-button>
-              </div>
-              <div class="plate">
-                <app-custom-button inStyle="common">
-                  <div class="plate-content">
-                    <p class="name">Man</p>
-                    <img src="../../../../../assets/img/wizard-page/Male.svg" />
-                  </div>
-                </app-custom-button>
-              </div>
-            </div>
+            <form class="single-input-form">
+              <mat-form-field class="field">
+                <input type="text" matInput style="text-align: center" />
+              </mat-form-field>
+            </form>
           </div>
         </ng-template>
 
@@ -124,7 +98,7 @@
             </div>
             <div class="subtitle">
               <h6>What is</h6>
-              <h1>YOUR CURRENT FITNESS LEVEL?</h1>
+              <h1>YOUR CURRENT FIGURE TYPE?</h1>
             </div>
             <div class="plates">
               <div class="plate">
