--- a/src/app/modules/home/pages/wizard-page/wizard-page.component.css
+++ b/src/app/modules/home/pages/wizard-page/wizard-page.component.css
@@ -61,6 +61,25 @@
   margin: auto 0;
 }
 
+.single-input-form {
+  background-color: white;
+  width: 100%;
+  margin-top: 30px;
+  border-radius: 10px;
+}
+
+.field {
+  width: 70%;
+  font-size: 50px;
+  font-weight: 800;
+  color: rgb(136, 136, 136);
+  margin: 0 15%;
+}
+
+.field-input {
+  text-align: center;
+}
+
 .next-clickable {
   display: flex;
   flex-flow: row-reverse;
